infrastructure/01-system/trivy-adapter/policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: trivy-operator-polr-adapter-egress
  namespace: trivy-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: trivy-operator-polr-adapter
  egress:
    # 1. Kubernetes API access
    - toEntities:
        - kube-apiserver
    # 2. DNS Resolution
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
